@@ -1,6 +1,6 @@
 /*
  * DBeaver - Universal Database Manager
- * Copyright (C) 2010-2024 DBeaver Corp and others
+ * Copyright (C) 2010-2026 DBeaver Corp and others
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -23,7 +23,6 @@ import org.jkiss.dbeaver.Log;
 import org.jkiss.dbeaver.ext.generic.GenericConstants;
 import org.jkiss.dbeaver.model.DBUtils;
 import org.jkiss.dbeaver.model.connection.DBPConnectionBootstrap;
-import org.jkiss.dbeaver.model.dpi.DPIContainer;
 import org.jkiss.dbeaver.model.exec.*;
 import org.jkiss.dbeaver.model.exec.jdbc.JDBCPreparedStatement;
 import org.jkiss.dbeaver.model.exec.jdbc.JDBCResultSet;
@@ -32,10 +31,14 @@ import org.jkiss.dbeaver.model.impl.jdbc.JDBCExecutionContext;
 import org.jkiss.dbeaver.model.impl.jdbc.JDBCRemoteInstance;
 import org.jkiss.dbeaver.model.impl.jdbc.JDBCUtils;
 import org.jkiss.dbeaver.model.runtime.DBRProgressMonitor;
+import org.jkiss.dbeaver.model.runtime.LocalCacheProgressMonitor;
+import org.jkiss.dbeaver.model.runtime.VoidProgressMonitor;
 import org.jkiss.dbeaver.model.struct.DBSObject;
 import org.jkiss.utils.CommonUtils;
 
 import java.sql.SQLException;
+import java.sql.SQLFeatureNotSupportedException;
+import java.util.List;
 import java.util.regex.Matcher;
 
 /**
@@ -46,11 +49,10 @@ public class GenericExecutionContext extends JDBCExecutionContext implements DBC
 
     private String selectedEntityName;
 
-    public GenericExecutionContext(@NotNull JDBCRemoteInstance instance, String purpose) {
+    public GenericExecutionContext(@NotNull JDBCRemoteInstance instance, @NotNull String purpose) {
         super(instance, purpose);
     }
 
-    @DPIContainer
     @NotNull
     @Override
     public GenericDataSource getDataSource() {
@@ -59,40 +61,50 @@ public class GenericExecutionContext extends JDBCExecutionContext implements DBC
 
     @Nullable
     @Override
-    public DBCExecutionContextDefaults getContextDefaults() {
+    public DBCExecutionContextDefaults<?,?> getContextDefaults() {
         return this;
     }
 
-    void determineSelectedEntity(DBRProgressMonitor monitor) {
+    void determineSelectedEntity(@NotNull DBRProgressMonitor monitor) {
         GenericDataSource dataSource = this.getDataSource();
 
         // Get selected entity (catalog or schema)
         selectedEntityName = null;
         try (JDBCSession session = openSession(monitor, DBCExecutionPurpose.META, "Determine default catalog/schema")) {
+            // Note: both catalog and schema might exist. And the active object must be the most concrete one (schema if exists)
             if (CommonUtils.isEmpty(dataSource.getQueryGetActiveDB())) {
-                {
-                    try {
-                        selectedEntityName = session.getCatalog();
-                        if (dataSource.getSelectedEntityType() == null && !CommonUtils.isEmpty(selectedEntityName)) {
-                            dataSource.setSelectedEntityType(GenericConstants.ENTITY_TYPE_CATALOG);
-                            dataSource.setSelectedEntityFromAPI(true);
-                        }
-                    } catch (Throwable e) {
-                        // Seems to be not supported
+                String catalogName;
+                String schemaName;
+                try {
+                    catalogName = session.getCatalog();
+                } catch (Throwable e) {
+                    catalogName = null; // Seems to be not supported
+                    if (!(e instanceof SQLFeatureNotSupportedException)) {
                         log.debug(e);
                     }
                 }
-                if (CommonUtils.isEmpty(selectedEntityName)) {
-                    // Try to use current schema
-                    try {
-                        selectedEntityName = session.getSchema();
-                        if (dataSource.getSelectedEntityType() == null && !CommonUtils.isEmpty(selectedEntityName)) {
-                            dataSource.setSelectedEntityType(GenericConstants.ENTITY_TYPE_SCHEMA);
-                            dataSource.setSelectedEntityFromAPI(true);
-                        }
-                    } catch (Throwable e) {
+                try {
+                    schemaName = session.getSchema();
+                } catch (Throwable e) {
+                    schemaName = null; // Seems to be not supported
+                    if (!(e instanceof SQLFeatureNotSupportedException)) {
                         log.debug(e);
                     }
+                }
+
+                String selectedObjectType = null;
+                if (CommonUtils.isNotEmpty(catalogName)) {
+                    selectedEntityName = catalogName;
+                    selectedObjectType = GenericConstants.ENTITY_TYPE_CATALOG;
+                }
+                if (CommonUtils.isNotEmpty(schemaName)) {
+                    selectedEntityName = schemaName;
+                    selectedObjectType = GenericConstants.ENTITY_TYPE_SCHEMA;
+                }
+
+                if (CommonUtils.isNotEmpty(selectedObjectType)) {
+                    dataSource.setSelectedEntityType(selectedObjectType);
+                    dataSource.setSelectedEntityFromAPI(true);
                 }
             } else {
                 try {
@@ -120,15 +132,18 @@ public class GenericExecutionContext extends JDBCExecutionContext implements DBC
             // If we have only one catalog then it is our selected entity
             if (dataSource.hasCatalogs() && dataSource.getCatalogs().size() == 1) {
                 dataSource.setSelectedEntityType(GenericConstants.ENTITY_TYPE_CATALOG);
-                selectedEntityName = dataSource.getCatalogs().get(0).getName();
+                selectedEntityName = dataSource.getCatalogs().getFirst().getName();
             } else if (dataSource.hasSchemas() && dataSource.getSchemas().size() == 1) {
                 dataSource.setSelectedEntityType(GenericConstants.ENTITY_TYPE_SCHEMA);
-                selectedEntityName = dataSource.getSchemas().get(0).getName();
+                selectedEntityName = dataSource.getSchemas().getFirst().getName();
             }
         }
     }
 
-    void initDefaultsFrom(DBRProgressMonitor monitor, GenericExecutionContext context) throws DBCException {
+    public void initDefaultsFrom(
+        @NotNull DBRProgressMonitor monitor,
+        @NotNull GenericExecutionContext context
+    ) throws DBCException {
         GenericCatalog defaultCatalog = context.getDefaultCatalog();
         String entityName = null;
         if (defaultCatalog != null && context.supportsCatalogChange()) {
@@ -182,31 +197,29 @@ public class GenericExecutionContext extends JDBCExecutionContext implements DBC
                     txnManager.setAutoCommit(monitor, false);
                 }
             }
+        } else {
+            selectedEntityName = context.selectedEntityName;
         }
     }
 
+    @Nullable
     @Override
     public GenericCatalog getDefaultCatalog() {
-        if (!CommonUtils.isEmpty(selectedEntityName)) {
-            GenericDataSource dataSource = getDataSource();
-            if (dataSource.hasCatalogs()) {
-                if (dataSource.getSelectedEntityType() == null || dataSource.getSelectedEntityType().equals(GenericConstants.ENTITY_TYPE_CATALOG) || !dataSource.hasSchemas()) {
-                    return getDataSource().getCatalog(selectedEntityName);
-                }
-            }
+        if (GenericConstants.ENTITY_TYPE_CATALOG.equals(getDataSource().getSelectedEntityType())
+            && getDefaultObject() instanceof GenericCatalog catalog
+        ) {
+            return catalog;
         }
         return getDataSource().getDefaultCatalog();
     }
 
+    @Nullable
     @Override
     public GenericSchema getDefaultSchema() {
-        if (!CommonUtils.isEmpty(selectedEntityName)) {
-            GenericDataSource dataSource = getDataSource();
-            if (!dataSource.hasCatalogs() && dataSource.hasSchemas()) {
-                if (dataSource.getSelectedEntityType() == null || dataSource.getSelectedEntityType().equals(GenericConstants.ENTITY_TYPE_SCHEMA) || !dataSource.hasCatalogs()) {
-                    return dataSource.getSchema(selectedEntityName);
-                }
-            }
+        if (GenericConstants.ENTITY_TYPE_SCHEMA.equals(getDataSource().getSelectedEntityType())
+            && getDefaultObject() instanceof GenericSchema schema
+        ) {
+            return schema;
         }
         return getDataSource().getDefaultSchema();
     }
@@ -214,10 +227,13 @@ public class GenericExecutionContext extends JDBCExecutionContext implements DBC
     @Override
     public boolean supportsCatalogChange() {
         GenericDataSource dataSource = getDataSource();
-        if (!(dataSource.getInfo() instanceof GenericDataSourceInfo)) {
-            return true;
+        if (!(dataSource.getInfo() instanceof GenericDataSourceInfo info)) {
+            if (dataSource.isSelectedEntityFromAPI()) {
+                return !dataSource.getContainer().getDriver().isInternalDriver();
+            } else {
+                return CommonUtils.isNotEmpty(dataSource.getQuerySetActiveDB());
+            }
         }
-        final GenericDataSourceInfo info = (GenericDataSourceInfo) dataSource.getInfo();
         if (dataSource.isSelectedEntityFromAPI() || !CommonUtils.isEmpty(dataSource.getQuerySetActiveDB())) {
             if (CommonUtils.isEmpty(dataSource.getSelectedEntityType())) {
                 return dataSource.hasCatalogs() && info.supportsCatalogSelection();
@@ -232,10 +248,13 @@ public class GenericExecutionContext extends JDBCExecutionContext implements DBC
     @Override
     public boolean supportsSchemaChange() {
         GenericDataSource dataSource = getDataSource();
-        if (!(dataSource.getInfo() instanceof GenericDataSourceInfo)) {
-            return true;
+        if (!(dataSource.getInfo() instanceof GenericDataSourceInfo info)) {
+            if (dataSource.isSelectedEntityFromAPI()) {
+                return !dataSource.getContainer().getDriver().isInternalDriver();
+            } else {
+                return CommonUtils.isNotEmpty(dataSource.getQuerySetActiveDB());
+            }
         }
-        final GenericDataSourceInfo info = (GenericDataSourceInfo) dataSource.getInfo();
         if (dataSource.isSelectedEntityFromAPI() || !CommonUtils.isEmpty(dataSource.getQuerySetActiveDB())) {
             if (CommonUtils.isEmpty(dataSource.getSelectedEntityType())) {
                 return !dataSource.hasCatalogs() && dataSource.hasSchemas() && info.supportsSchemaSelection();
@@ -248,11 +267,11 @@ public class GenericExecutionContext extends JDBCExecutionContext implements DBC
     }
 
     @Override
-    public void setDefaultCatalog(DBRProgressMonitor monitor, GenericCatalog catalog, GenericSchema schema) throws DBCException {
-        if (catalog == null) {
-            log.debug("Null current catalog");
-            return;
-        }
+    public void setDefaultCatalog(
+        @NotNull DBRProgressMonitor monitor,
+        @NotNull GenericCatalog catalog,
+        @Nullable GenericSchema schema
+    ) throws DBCException {
         GenericDataSource dataSource = getDataSource();
         GenericCatalog oldSelectedCatalog = getDefaultCatalog();
         DBCTransactionManager txnManager = null;
@@ -299,7 +318,7 @@ public class GenericExecutionContext extends JDBCExecutionContext implements DBC
     }
 
     @Override
-    public void setDefaultSchema(DBRProgressMonitor monitor, GenericSchema schema) throws DBCException {
+    public void setDefaultSchema(@NotNull DBRProgressMonitor monitor, @Nullable GenericSchema schema) throws DBCException {
         if (schema == null) {
             log.debug("Null current schema");
             return;
@@ -315,7 +334,7 @@ public class GenericExecutionContext extends JDBCExecutionContext implements DBC
         DBUtils.fireObjectSelect(schema, true, this);
     }
 
-    private void setDefaultSchema(DBRProgressMonitor monitor, String schemaName) throws DBCException {
+    private void setDefaultSchema(@NotNull DBRProgressMonitor monitor, @NotNull String schemaName) throws DBCException {
         GenericDataSource dataSource = getDataSource();
         try (JDBCSession session = openSession(monitor, DBCExecutionPurpose.UTIL, TASK_TITLE_SET_SCHEMA)) {
             if (dataSource.isSelectedEntityFromAPI()) {
@@ -337,11 +356,10 @@ public class GenericExecutionContext extends JDBCExecutionContext implements DBC
     }
 
     @Override
-    public boolean refreshDefaults(DBRProgressMonitor monitor, boolean useBootstrapSettings) throws DBException {
-
+    public boolean refreshDefaults(@NotNull DBRProgressMonitor monitor, boolean useBootstrapSettings) throws DBException {
         if (useBootstrapSettings) {
             DBPConnectionBootstrap bootstrap = getBootstrapSettings();
-            if (!CommonUtils.isEmpty(bootstrap.getDefaultSchemaName())) {
+            if (!CommonUtils.isEmpty(bootstrap.getDefaultSchemaName()) && this.supportsSchemaChange()) {
                 setDefaultSchema(monitor, bootstrap.getDefaultSchemaName());
             }
         }
@@ -366,9 +384,27 @@ public class GenericExecutionContext extends JDBCExecutionContext implements DBC
         return false;
     }
 
+    @Nullable
     public GenericObjectContainer getDefaultObject() {
         if (!CommonUtils.isEmpty(selectedEntityName)) {
             GenericDataSource dataSource = getDataSource();
+            if (dataSource.hasCatalogs() && GenericConstants.ENTITY_TYPE_CATALOG.equals(dataSource.getSelectedEntityType())) {
+                return dataSource.getCatalog(selectedEntityName);
+            } else if (GenericConstants.ENTITY_TYPE_SCHEMA.equals(dataSource.getSelectedEntityType())) {
+                if (dataSource.hasSchemas()) {
+                    return dataSource.getSchema(selectedEntityName);
+                } else if (dataSource.hasCatalogs()) {
+                    List<GenericCatalog> catalogs = dataSource.getCatalogs();
+                    if (catalogs.size() == 1) {
+                        try {
+                            return catalogs.getFirst().getSchema(
+                                new LocalCacheProgressMonitor(new VoidProgressMonitor()), selectedEntityName);
+                        } catch (DBException e) {
+                            log.debug("Error reading schema in the first catalog: " + e.getMessage());
+                        }
+                    }
+                }
+            }
             if (dataSource.hasCatalogs()) {
                 if (dataSource.getSelectedEntityType() == null || dataSource.getSelectedEntityType().equals(GenericConstants.ENTITY_TYPE_CATALOG)) {
                     return dataSource.getCatalog(selectedEntityName);
@@ -384,6 +420,7 @@ public class GenericExecutionContext extends JDBCExecutionContext implements DBC
         return null;
     }
 
+    @Nullable
     public String getDefaultCatalogCached() {
         if (!CommonUtils.isEmpty(selectedEntityName)) {
             GenericDataSource dataSource = getDataSource();
@@ -398,6 +435,7 @@ public class GenericExecutionContext extends JDBCExecutionContext implements DBC
         return null;
     }
 
+    @Nullable
     public String getDefaultSchemaCached() {
         if (!CommonUtils.isEmpty(selectedEntityName)) {
             GenericDataSource dataSource = getDataSource();
