@@ -1,6 +1,6 @@
 /*
  * DBeaver - Universal Database Manager
- * Copyright (C) 2010-2024 DBeaver Corp and others
+ * Copyright (C) 2010-2026 DBeaver Corp and others
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -29,6 +29,7 @@ import org.jkiss.dbeaver.registry.DataSourceProviderRegistry;
 import org.jkiss.dbeaver.runtime.DBWorkbench;
 import org.jkiss.dbeaver.utils.RuntimeUtils;
 import org.jkiss.utils.CommonUtils;
+import org.jkiss.utils.IOUtils;
 
 import java.io.IOException;
 import java.net.URL;
@@ -45,31 +46,27 @@ public class DriverLibraryLocal extends DriverLibraryAbstract {
     private static final Log log = Log.getLog(DriverLibraryLocal.class);
     private boolean useOriginalJar;
 
-    public DriverLibraryLocal(DriverDescriptor driver, FileType type, String path) {
+    public DriverLibraryLocal(@NotNull DriverDescriptor driver, @NotNull FileType type, @NotNull String path) {
         super(driver, type, path);
     }
 
-    public DriverLibraryLocal(DriverDescriptor driver, IConfigurationElement config) {
+    public DriverLibraryLocal(@Nullable DriverDescriptor driver, @NotNull IConfigurationElement config) {
         super(driver, config);
     }
 
-    public DriverLibraryLocal(DriverDescriptor driverDescriptor, DriverLibraryLocal copyFrom) {
+    public DriverLibraryLocal(@NotNull DriverDescriptor driverDescriptor, @NotNull DriverLibraryLocal copyFrom) {
         super(driverDescriptor, copyFrom);
     }
 
+    @NotNull
     @Override
-    public DBPDriverLibrary copyLibrary(DriverDescriptor driverDescriptor) {
+    public DBPDriverLibrary copyLibrary(@NotNull DriverDescriptor driverDescriptor) {
         return new DriverLibraryLocal(driverDescriptor, this);
     }
 
     @Override
     public boolean isDownloadable() {
         return false;
-    }
-
-    @Override
-    public void resetVersion() {
-        // do nothing
     }
 
     @Override
@@ -83,21 +80,20 @@ public class DriverLibraryLocal extends DriverLibraryAbstract {
 
     @Nullable
     @Override
-    public String getExternalURL(DBRProgressMonitor monitor) {
+    public String getExternalURL(@NotNull DBRProgressMonitor monitor) {
         return null;
     }
-
 
     @Nullable
     @Override
     public Path getLocalFile() {
         // Try to use direct path
         String localFilePath = this.getLocalFilePath();
-        if (DBWorkbench.isDistributed() || DBWorkbench.getPlatform().getApplication().isMultiuser()) {
+        if (driver != null && (DBWorkbench.isDistributed() || DBWorkbench.getPlatform().getApplication().isMultiuser())) {
             Path resolvedCache;
-            List<DriverDescriptor.DriverFileInfo> driverFileInfos = driver.getResolvedFiles().get(this);
+            List<DriverFileInfo> driverFileInfos = driver.getDefaultDriverLoader().getResolvedFiles().get(this);
             if (!CommonUtils.isEmpty(driverFileInfos) && driverFileInfos.size() == 1) {
-                DriverDescriptor.DriverFileInfo driverFileInfo = driverFileInfos.get(0);
+                DriverFileInfo driverFileInfo = driverFileInfos.getFirst();
                 resolvedCache = resolveCacheDir().resolve(driverFileInfo.getFile().toString());
             } else {
                 // need to correct driver initialization, otherwise, if at least one file was copied,
@@ -119,14 +115,14 @@ public class DriverLibraryLocal extends DriverLibraryAbstract {
             // Try to get local file
             platformFile = detectLocalFile();
             if (platformFile != null && Files.exists(platformFile)) {
-                // Relative file do not exists - use plain one
+                // Relative file does not exist - use plain one
                 return platformFile;
             }
         } catch (InvalidPathException e) {
             // ignore - bad local path
         }
 
-        URL url = driver.getProviderDescriptor().getContributorBundle().getEntry(localFilePath);
+        URL url = driver == null ? null : driver.getProviderDescriptor().getContributorBundle().getEntry(localFilePath);
         if (url == null) {
             // Find in external resources
             url = DataSourceProviderRegistry.getInstance().findResourceURL(localFilePath);
@@ -155,22 +151,18 @@ public class DriverLibraryLocal extends DriverLibraryAbstract {
         return platformFile;
     }
 
-    @Nullable
-    @Override
-    public Path getLocalFile(@NotNull DBRProgressMonitor monitor) {
-        return getLocalFile();
-    }
-
+    @NotNull
     private Path resolveCacheDir() {
         if (isUseOriginalJar()) {
             return DriverDescriptor.getProvidedDriversStorageFolder();
         }
         if (DBWorkbench.isDistributed() || isCustom()) {
-            // we do not have any provided drivers in distributed mode
-            // and custom drivers stored in the workspace
-            return DriverDescriptor.getWorkspaceDriversStorageFolder();
+            return DriverDescriptor.getExternalDriversStorageFolder();
         }
-
+        var providedFolder = DriverDescriptor.getProvidedDriversStorageFolder();
+        if (!IOUtils.isFileFromDefaultFS(providedFolder) && isDownloadable()) {
+            return DriverDescriptor.getExternalDriversStorageFolder();
+        }
         return DriverDescriptor.getProvidedDriversStorageFolder();
     }
 
@@ -193,6 +185,16 @@ public class DriverLibraryLocal extends DriverLibraryAbstract {
             // Use custom drivers path
             file = DriverDescriptor.getCustomDriversHome().resolve(localPath);
         }
+        if (!Files.exists(file)) {
+            if (DBWorkbench.isDistributed()) {
+                // in distributed mode we use external drivers storage folder to store
+                // all driver files (including custom ones)
+                return DriverDescriptor.getExternalDriversStorageFolder().resolve(localPath);
+            } else if (DBWorkbench.getPlatform().getApplication().isMultiuser()) {
+                // driver file can be in workspace folder for multiuser applications
+                return DriverDescriptor.getWorkspaceDriversStorageFolder().resolve(localPath);
+            }
+        }
         return file;
     }
 
@@ -210,21 +212,39 @@ public class DriverLibraryLocal extends DriverLibraryAbstract {
     @NotNull
     @Override
     public DBIcon getIcon() {
+        // for distributed application driver libraries could not be located locally
+        if (DBWorkbench.isDistributed() && isDistributedDriverLibraryFolder()) {
+            return DBIcon.TREE_FOLDER_ADMIN;
+        }
         Path localFile = getLocalFile();
         if (localFile != null && Files.isDirectory(localFile)) {
             return DBIcon.TREE_FOLDER_ADMIN;
         } else {
-            switch (type) {
-                case lib:
-                    return DBIcon.LIBRARY;
-                case jar:
-                    return DBIcon.JAR;
-                case license:
-                    return DBIcon.TYPE_TEXT;
-                default:
-                    return DBIcon.TYPE_UNKNOWN;
-            }
+            return switch (type) {
+                case lib -> DBIcon.LIBRARY;
+                case jar -> DBIcon.JAR;
+                case license -> DBIcon.TYPE_TEXT;
+                default -> DBIcon.TYPE_UNKNOWN;
+            };
         }
+    }
+
+    private boolean isDistributedDriverLibraryFolder() {
+        if (driver == null) {
+            return false;
+        }
+        List<DriverFileInfo> fileInfos = driver.getDefaultDriverLoader().getResolvedFiles().get(this);
+        if (fileInfos == null || fileInfos.isEmpty()) {
+            log.warn("Driver files are empty for driver %s (%s)".formatted(driver.getId(), getId()));
+            return true;
+        }
+        if (fileInfos.size() > 1) {
+            return true;
+        }
+        // check that there are no file extensions in library, but resolved file has extension
+        String libraryExt = IOUtils.getFileExtension(getLocalFilePath());
+        String resolvedFileExt = IOUtils.getFileExtension(fileInfos.getFirst().getFile());
+        return CommonUtils.isEmpty(libraryExt) && !CommonUtils.isEmpty(resolvedFileExt);
     }
 
     /**
