@@ -1,6 +1,6 @@
 /*
  * DBeaver - Universal Database Manager
- * Copyright (C) 2010-2024 DBeaver Corp and others
+ * Copyright (C) 2010-2026 DBeaver Corp and others
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,6 +16,11 @@
  */
 package org.jkiss.dbeaver.ui;
 
+import org.eclipse.ui.internal.Workbench;
+import org.jkiss.code.NotNull;
+import org.jkiss.dbeaver.model.app.DBPPlatformDesktop;
+import org.jkiss.dbeaver.runtime.DBWorkbench;
+
 import java.util.ArrayList;
 import java.util.List;
 
@@ -28,8 +33,9 @@ public class UIExecutionQueue {
 
     private static final List<Runnable> execQueue = new ArrayList<>();
     private static int runCount = 0;
+    private static volatile Runnable nextJob;
 
-    public static void queueExec(Runnable runnable) {
+    public static void queueExec(@NotNull Runnable runnable) {
         synchronized (execQueue) {
             execQueue.add(runnable);
         }
@@ -52,22 +58,30 @@ public class UIExecutionQueue {
     }
 
     private static void executeInUI() {
-        Runnable nextJob;
         synchronized (execQueue) {
-            if (runCount > 0) {
-                UIUtils.asyncExec(UIExecutionQueue::executeInUI);
+            boolean workbenchStarted = DBWorkbench.getPlatform() instanceof DBPPlatformDesktop pd && pd.isWorkbenchStarted();
+            if (runCount > 0 || !workbenchStarted) {
+                // If workbench wasn't fully started or
+                // job is running or
+                // some Eclipse job is active in UI thread then retry later
+                if (!DBWorkbench.getPlatform().isShuttingDown()) {
+                    UIUtils.asyncExec(UIExecutionQueue::executeInUI);
+                }
                 return;
             }
             if (execQueue.isEmpty()) {
                 return;
             }
             runCount++;
-            nextJob = execQueue.remove(0);
+            nextJob = execQueue.removeFirst();
         }
         try {
-            nextJob.run();
+            if (!Workbench.getInstance().isClosing()) {
+                nextJob.run();
+            }
         } finally {
             synchronized (execQueue) {
+                nextJob = null;
                 runCount--;
             }
         }
